[gd_scene load_steps=4 format=3 uid="uid://bulyop546j4q7"]

[ext_resource type="Script" uid="uid://dgcre11dschwj" path="res://repair_thing.gd" id="1_s57ll"]
[ext_resource type="Texture2D" uid="uid://3kvif5bs5wx5" path="res://assets/kenney/sci fi rts/Structure/scifiStructure_16.png" id="2_vurmb"]
[ext_resource type="Texture2D" uid="uid://wj7fhx78of3j" path="res://assets/kenney/sci fi rts/Structure/scifiStructure_01.png" id="3_dt316"]

[node name="RepairThing" type="Node2D" groups=["RepairThings"]]
script = ExtResource("1_s57ll")

[node name="ThingBroken" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_vurmb")

[node name="ThingNotBroken" type="Sprite2D" parent="."]
texture = ExtResource("3_dt316")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -79.0
offset_top = -84.0
offset_right = 79.0
offset_bottom = -57.0
size_flags_vertical = 4

[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
